--- a/Views/index.html
+++ b/Views/index.html
@@ -5,30 +5,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta name="author" content="Shivam Missar">
-        <link rel="icon" href="../public/assets/audiLogo.png" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="../public/styles.css/general.css">
-        <link rel="stylesheet" href="../public/styles.css/index.css">
-        <link rel="stylesheet" href="../public/styles.css/media.css">
-        <script src=../public/sites.js/index.js defer></script>    
-        <script src="../public/sites.js/header.js"defer></script>
+        <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="styles.css/general.css">
+        <link rel="stylesheet" href="styles.css/index.css">
+        <link rel="stylesheet" href="styles.css/media.css">
+        <script src=sites.js/index.js defer></script>    
+        <script src="sites.js/header.js"defer></script>
     
     </head>
 
     <body>
 
         <header id="top">
-
             <nav>
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                    <li><a href="index.html"><img id="logo" src="../public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                    <li><a href="communities.html">Find a community</a></li>
+                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                    <li><a href="/communities">Find a community</a></li>
                     <li><a href="#">Page 3</a></li>
                     
 
                     <div class="loginSignUp">
-                            <li><a href="/Views/login.html">Login</a></li>
-                            <li><a href="/Views/register.html">Register</a></li>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="/register">Register</a></li>
                             <div id="manageAccount" style="display: none;">
                                 <li><a href="/Views/manage-account.html">Manage Account</a></li>
                             </div>
@@ -45,13 +44,13 @@
         <div class="community">
            
             <h2>Find a <span class="changeTextColour"> community </span> best suited to <span class="changeTextColour"> you </span></h2>
-            <img src="../public/assets/audiLogo.png" alt="This is the audi logo which shows 4 rings">
+            <img src="assets/audiLogo.png" alt="This is the audi logo which shows 4 rings">
             <a href="communities.html">Join a community</a>
 
         </div>
         <div class="intro">
             <!-- Image from:Photo byhttps://unsplash.com/photos/a-person-holding-a-cell-phone-in-front-of-a-black-car-J2H_DGzCWU4 -->
-            <img src="../public/assets/heroImage.jpg" alt="Image shows the an audi a3 introducing the page">
+            <img src="assets/heroImage.jpg" alt="Image shows the an audi a3 introducing the page">
             <h3>Welcome to the Audi Forum page, here you can ask any question related to your car.</h3>
         </div>
 
@@ -62,17 +61,17 @@
             <h3><span class="changeTextColour">Audi</span> News</h3>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-close-up-of-the-front-of-a-blue-car-D0q3jhw0tGE -->
-                <img src="../public/assets/AudiA6.jpg" alt="This is the all new blue Audi RS6">
+                <img src="assets/AudiA6.jpg" alt="This is the all new blue Audi RS6">
                 <div class="text">Audi A6 BLUE</div>
             </div>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-black-car-parked-on-a-road-jFKH2XsRQC8 -->
-                <img src="../public/assets/etronGT.jpg" alt=""> 
+                <img src="assets/etronGT.jpg" alt=""> 
                 <div class="text">Caption</div>
             </div>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-person-holding-a-car-key-in-front-of-a-silver-car-tgUdTefRlSw -->
-                <img src="../public/assets/rs7.jpg" alt="">
+                <img src="assets/rs7.jpg" alt="">
                 <div class="text">RS7</div>
             </div>
 
@@ -89,8 +88,8 @@
                     <!-- Bottom navigation for ease -->
                     <ul>
                         <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                        <li><a href="/public/index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                        <li><a href="/public/communities.html">Find a community</a></li>
+                        <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                        <li><a href="/communities">Find a community</a></li>
                         <li><a href="#">Page 3</a></li>
                     </ul>
                 </nav>
