--- a/Views/register.html
+++ b/Views/register.html
@@ -51,7 +51,7 @@
 <div class="registerForm">
     <h1>Register</h1>
     <h3>Fill out the form below to create an account</h3>
-    <form method="post" action="http://localhost:3000/register"">
+    <form method="post" action="/register"">
         <div class="form-group">
             <label for="Username">Username</label>
             <input type="text" id="fullname" name="Username" required placeholder="Enter your full name">
