Login page successfully working and logging user in

--- a/Views/index.html
+++ b/Views/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                    <li><a href="/index"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                     <li><a href="/communities">Find a community</a></li>
                     <li><a href="#">Page 3</a></li>
                     
