--- a/Views/A1community.html
+++ b/Views/A1community.html
@@ -5,13 +5,13 @@
 <head>
 
 <title>A1 Community</title>
-<link rel="icon" href="/public/assetsaudiLogo.png" type="image/x-icon">
+<link rel="icon" href="assetsaudiLogo.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Shivam Missar">
-<link rel="stylesheet" href="/public/styles.css/general.css">
+<link rel="stylesheet" href="styles.css/general.css">
 
-<link rel="stylesheet" href="/public/styles.css/individualCommunties.css">
-<link rel="stylesheet" href="/public/styles.css/media.css">
+<link rel="stylesheet" href="styles.css/individualCommunties.css">
+<link rel="stylesheet" href="styles.css/media.css">
 
 
 </head>
@@ -20,21 +20,23 @@
 
 <body>
 
-    <header>
-        <nav>
-            <ul>
-                <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                <li><a href="index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="communities.html">Find a community</a></li>
-                <li><a href="#">Page 3</a></li>
+    <nav>
+        <ul>
+            <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
+            <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+            <li><a href="/communities">Find a community</a></li>
+            <li><a href="#">Page 3</a></li>
+            
 
-                <div class="loginSignUp">
-
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register </a></li>
-                </div>
-            </ul>
-        </nav>
+            <div class="loginSignUp">
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/register">Register</a></li>
+                    <div id="manageAccount" style="display: none;">
+                        <li><a href="/Views/manage-account.html">Manage Account</a></li>
+                    </div>
+            </div>
+        </ul>
+    </nav>
         <div class="popularTags">
             <h2>Tags will go here</h2>
         </div>
