--- a/Views/index.html
+++ b/Views/index.html
@@ -10,27 +10,25 @@
         <link rel="stylesheet" href="styles.css/index.css">
         <link rel="stylesheet" href="styles.css/media.css">
         <script src=sites.js/index.js defer></script>    
-        <script src="sites.js/header.js"defer></script>
+       
     
     </head>
 
     <body>
-
         <header id="top">
             <nav>
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                    <li><a href="/index"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
                     <li><a href="/communities">Find a community</a></li>
                     <li><a href="#">Page 3</a></li>
                     
 
                     <div class="loginSignUp">
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Register</a></li>
-                            <div id="manageAccount" style="display: none;">
-                                <li><a href="/Views/manage-account.html">Manage Account</a></li>
-                            </div>
+                        <li id="loginLink"><a href="/login">Login</a></li>
+                        <li id="registerLink"><a href="/register">Register</a></li>
+                        <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
+                        <li id="signOutLink" style="display: none;"><a href="/signout">Sign Out</a></li>
                     </div>
                 </ul>
             </nav>
@@ -73,14 +71,8 @@
                 <!-- https://unsplash.com/photos/a-person-holding-a-car-key-in-front-of-a-silver-car-tgUdTefRlSw -->
                 <img src="assets/rs7.jpg" alt="">
                 <div class="text">RS7</div>
-            </div>
-
-
-            
+            </div>            
         </div>
-
-
-
 
         <footer>
             <div class="bottom-footer">
@@ -101,5 +93,10 @@
 
             <p class="trademark">2024 Audi Forum Website &#174;</p>
         </footer>
+        
+
+
+        
     </body>
 </html>
+ <script src="sites.js/header.js"></script>
