--- a/Views/A1community.html
+++ b/Views/A1community.html
@@ -5,7 +5,7 @@
 <head>
 
 <title>A1 Community</title>
-<link rel="icon" href="assetsaudiLogo.png" type="image/x-icon">
+<link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Shivam Missar">
 <link rel="stylesheet" href="styles.css/general.css">
@@ -29,11 +29,10 @@
             
 
             <div class="loginSignUp">
-                    <li><a href="/login">Login</a></li>
-                    <li><a href="/register">Register</a></li>
-                    <div id="manageAccount" style="display: none;">
-                        <li><a href="/Views/manage-account.html">Manage Account</a></li>
-                    </div>
+                <li id="loginLink"><a href="/login">Login</a></li>
+                <li id="registerLink"><a href="/register">Register</a></li>
+                <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
+                <li id="signOutLink" style="display: none;"><a href="/logout">Sign Out</a></li>
             </div>
         </ul>
     </nav>
@@ -44,7 +43,7 @@
 
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-a1-sportback-8 -->
-<img src="/public/assets/a1hero.jpg">
+<img src="assets/a1hero.jpg">
 <h1><span class="changeTextColour">Audi</span> A1 community</h1>
 </section>
 
@@ -63,8 +62,8 @@
             <!-- Bottom navigation for ease -->
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                <li><a href="/public/index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="/public/communities.html">Find a community</a></li>
+                <li><a href="index.html"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                <li><a href="communities.html">Find a community</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
         </nav>
