--- a/Views/Q3community.html
+++ b/Views/Q3community.html
@@ -5,13 +5,13 @@
 <head>
 
 <title>Q3 Community</title>
-<link rel="icon" href="/public/assets/audiLogo.png" type="image/x-icon">
+<link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/style.css">
 <meta name="author" content="Shivam Missar">
-<link rel="stylesheet" href="/public/styles.css/general.css">
-<link rel="stylesheet" href="/public/styles.css/individualCommunties.css">
-<link rel="stylesheet" href="/public/styles.css/media.css">
+<link rel="stylesheet" href="styles.css/general.css">
+<link rel="stylesheet" href="styles.css/individualCommunties.css">
+<link rel="stylesheet" href="styles.css/media.css">
 
 
 </head>
@@ -24,14 +24,16 @@
         <nav>
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                <li><a href="index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="communities.html">Find a community</a></li>
+                <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                <li><a href="/communities">Find a community</a></li>
                 <li><a href="#">Page 3</a></li>
+                
 
                 <div class="loginSignUp">
-
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="register.html">Register </a></li>
+                    <li id="loginLink"><a href="/login">Login</a></li>
+                    <li id="registerLink"><a href="/register">Register</a></li>
+                    <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
+                    <li id="signOutLink" style="display: none;"><a href="/logout">Sign Out</a></li>
                 </div>
             </ul>
         </nav>
@@ -43,7 +45,7 @@
 
 <section class="Introduction">
     <!-- https://www.audi-mediacenter.com/en/audi-rs-q3-sportback-12104-->
-<img src="/public/assets/q3hero.jpg">
+<img src="/assets/q3hero.jpg">
 <h1><span class="changeTextColour">Audi</span> Q3 community</h1>
 </section>
 
@@ -61,8 +63,8 @@
             <!-- Bottom navigation for ease -->
             <ul>
                 <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                <li><a href="/public/index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                <li><a href="/public/communities.html">Find a community</a></li>
+                <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                <li><a href="/communities">Find a community</a></li>
                 <li><a href="#">Page 3</a></li>
             </ul>
         </nav>
