Created manage account stylesheet

--- a/Views/manageaccounts.html
+++ b/Views/manageaccounts.html
@@ -38,29 +38,32 @@
     
 
 
+    <div class="update-container">
+        <form method="post" action="/manage-account/update-email">
+            <label for="newemail">New Email</label>
+            <input type="email" name="newemail" id="newemail">
     
-    <form method="post" action="/manage-account/update-email">
-        <label for="newemail">New Email</label>
-        <input type="email" name="newemail" id="newemail">
+            <button class="SubmitRegister" id="">Submit</button>
+        </form>
+    
+    
+        <form method="post" action="/manage-account/update-password">
+            <label for="newPassword">New Password</label>
+            <input type="password" name="newPassword" id="newPassword">
+            <button class="SubmitRegister" id="">Submit</button>
+        </form>
+    
+    
+        <form method="post" action="/manage-account/update-username">
+            <label for="newUsername">New Username</label>
+            <input type="text" name="newUsername" id="newUsername">
+    
+            <button class="SubmitRegister" id="">Submit</button>
+        </form>
+    
 
-        <button class="SubmitRegister" id="">Submit</button>
-    </form>
-
-
-    <form method="post" action="/manage-account/update-password">
-        <label for="newPassword">New Password</label>
-        <input type="password" name="newPassword" id="newPassword">
-        <button class="SubmitRegister" id="">Submit</button>
-    </form>
-
-
-    <form method="post" action="/manage-account/update-username">
-        <label for="newUsername">New Username</label>
-        <input type="text" name="newUsername" id="newUsername">
-
-        <button class="SubmitRegister" id="">Submit</button>
-    </form>
-
+    </div>
+    
 
 
 
