Created a form which allows the user to create a post

--- a/Views/communities.html
+++ b/Views/communities.html
@@ -49,7 +49,7 @@
         <!-- Photo by <a href="https://unsplash.com/@lovesyautopics?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Remy Lovesy</a> on <a href="https://unsplash.com/photos/silver-suv-on-beach-during-daytime-7mf-og0063c?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A4 comunity-containter">
-            <h2><a href="A4community.html"><span class="changeTextColour">A4</span> communtiy page</a></h2>
+            <h2><a href="/A4"><span class="changeTextColour">A4</span> communtiy page</a></h2>
             <img src="assets/a4-community.jpg"alt="image represents the a6 community">
 
 
