--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -51,11 +51,25 @@
 
 
 <section class="Discussions">
-
     <h2 class="changeTextColour">Discussions</h2>
 
-
-
+    <button id="addPost" onclick="getForm()" class="disccusionButton">Start a discussion</button>
+    <div class="disccusionForm" id="disccusionForm">
+        <h4>Your Post</h1>
+        <form method="post">
+            <label for="Title">Topic Of discussion</label>
+            <input type="text" name="Title" id="title" placeholder="Enter your title of disccusion here">
+            <label for="description">What is your question</label>
+            <input type="text" name="description" placeholder="Enter your question here">
+    
+    
+            <!-- This used to create a filter -->
+            <input type="hidden" name="modelType" id="modelType" > 
+    
+            <button type="submit">Start disccusion</button>
+        </form>
+    </div>
+    
 </section>
 
 
@@ -78,9 +92,11 @@
 
     <p class="trademark">2024 Audi Forum Website &#174;</p>
 </footer>
-
+<script src="sites.js/communities.js"></script>
+<script>
+    document.getElementById('modelType').value = getUrl();
+    </script>
 </body>
 
-
-
 </html>
+<script src="sites.js/header.js"></script>
