--- a/Views/login.html
+++ b/Views/login.html
@@ -52,12 +52,12 @@
     <form method="POST" action="/login">
         <div class="form-group">
             <label for="Username">Email</label>
-            <input type="text" id="username" name="Username" required placeholder="Enter your email">
+            <input type="text" id="username" name="Username" required placeholder="Enter your username">
         </div>
        
         <div class="form-group">
             <label for="Password">Password</label>
-            <input type="password" id="password" name="Password" required placeholder="Enter your email">
+            <input type="password" id="password" name="Password" required placeholder="Enter your password">
         </div>
 
         <button class="SubmitLogin" id="submitLoginCredientals">Submit</button>
