--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -33,3 +33,80 @@
 
 
 
+
+.disccusionButton
+{
+    border: 3px solid black;
+    background: white;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px;
+    width: 400px;
+    position: relative;
+    left: 700px;
+    top: -60px;
+    display: none;
+
+}
+.disccusionButton:hover
+{
+    border: 3px solid red;
+}
+
+.Discussions h2
+{
+   font-weight: 200;
+   font-size: 42px;
+}
+
+.disccusionForm
+{
+    background-color: #666;
+    padding: 10px;
+    height: 400px;
+    display:none;
+}
+
+.disccusionForm form
+{
+    position: relative;
+    left: 580px;
+
+}
+
+.disccusionForm h4
+{
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    font-family: sans-serif;
+}
+
+.disccusionForm form input 
+{
+    width: 600px;
+    text-align: center;
+    padding: 8px;
+    border:none;
+    border-radius: 4px;
+    height: 25px;
+}
+
+.disccusionForm form label
+{
+    display: block;
+    color: white;
+    font-family: sans-serif;
+}
+.disccusionForm form button
+{
+    display: block;
+    cursor: pointer;
+    border: none;
+    padding: 10px;
+    font-size: 17px;
+    width: 600px;
+    margin-top: 100px;
+}
+
+
