--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -56,7 +56,7 @@
     <button id="addPost" onclick="getForm()" class="disccusionButton">Start a discussion</button>
     <div class="disccusionForm" id="disccusionForm">
         <h4>Your Post</h1>
-        <form method="post">
+        <form method="post" action="/A4/A4discussions">
             <label for="Title">Topic Of discussion</label>
             <input type="text" name="Title" id="title" placeholder="Enter your title of disccusion here">
             <label for="description">What is your question</label>
