--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -108,5 +108,53 @@
     width: 600px;
     margin-top: 100px;
 }
+.showPosts 
+{
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+
+.showPosts h2
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    font-size: 30px;
+}
+.discussion-topic
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+}
+.discussion-description
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+}
+
+.discussion-username
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+}
+
+
+.discussion-reply
+{
+    border: none;
+    padding: 10px;
+    background-color: #666;
+    color: white;
+    cursor: pointer;
+}
+.discussion-delete
+{
+    border: none;
+    padding: 10px;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+}
+
 
 
