Seperated javascript for header and individual content as it was giving error. Now solved

--- a/public/styles.css/individualCommunties.css
+++ b/public/styles.css/individualCommunties.css
@@ -146,6 +146,7 @@
     background-color: #666;
     color: white;
     cursor: pointer;
+    display: none;
 }
 .discussion-delete
 {
@@ -154,6 +155,7 @@
     background-color: red;
     color: white;
     cursor: pointer;
+    display: none;
 }
 
 
