--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -22,7 +22,7 @@
                     <li id="loginLink"><a href="/login">Login</a></li>
                     <li id="registerLink"><a href="/register">Register</a></li>
                     <li id="manageAccountLink" style="display: none;"><a href="/manage-account">Manage Account</a></li>
-                    <li id="signOutLink" style="display: none;"><a href="/logout">Sign Out</a></li>
+                    <li id="signOutLink" style="display: none;"><a href="/signout">Sign Out</a></li>
                 </div>
             </ul>
         </nav>
@@ -109,8 +109,8 @@
                     <p class="discussion-username">Posted by: ${discussion.Username}</p>
 
 
-                    <button class="discussion-reply" id="discussion-reply-button" onclick="replyToDiscussion('${discussion.Title}', '${discussion.Username}')">Reply</button>
-                    <button class="discussion-delete" id="discussion-delete-button"onclick="deleteDiscussion('${discussion.Title}', '${discussion.Username}')">Delete</button>
+                    <button class="discussion-reply replyButton"  onclick="replyToDiscussion('${discussion.Title}', '${discussion.Username}')">Reply</button>
+                    <button class="discussion-delete deleteButton"  onclick="deleteDiscussion('${discussion.Title}', '${discussion.Username}')">Delete</button>
                 `;
                         discussionsContainer.appendChild(discussionElement);
                     });
