--- a/Views/communities.html
+++ b/Views/communities.html
@@ -59,73 +59,73 @@
    <!-- Photo by <a href="https://unsplash.com/@stablevehiclecontracts?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Moffatt</a> on <a href="https://unsplash.com/photos/a-black-car-parked-on-a-road-ZSBpc7LdhHg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A6 comunity-containter">
-            <h2><a href="A6community.html"><span class="changeTextColour">A6</span> communtiy page</a></h2>
-            <img src="/public/assets/a6-community.jpg" alt="image represents the A6 community">
+            <h2><a href="/A6"><span class="changeTextColour">A6</span> communtiy page</a></h2>
+            <img src="assets/a6-community.jpg" alt="image represents the A6 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@stablevehiclecontracts?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Moffatt</a> on <a href="https://unsplash.com/photos/a-car-parked-on-the-side-of-a-road-3WAumCHtoHU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A7 comunity-containter">
-            <h2><a href="A7community.html"><span class="changeTextColour">A7</span> communtiy page</a></h2>
-            <img src="/public/assets/a7-community.jpg" alt="image represents the A7 community">
+            <h2><a href="/A7"><span class="changeTextColour">A7</span> communtiy page</a></h2>
+            <img src="assets/a7-community.jpg" alt="image represents the A7 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@stablevehiclecontracts?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Moffatt</a> on <a href="https://unsplash.com/photos/a-blue-car-on-a-road-v8Cn_g-VCSE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A3 comunity-containter">
-            <h2><a href="A3community.html"><span class="changeTextColour">A3</span> communtiy page</a></h2>
-            <img src="/public/assets/a3-community.jpg" alt="image represents the a3 community">
+            <h2><a href="/A3"><span class="changeTextColour">A3</span> communtiy page</a></h2>
+            <img src="assets/a3-community.jpg" alt="image represents the a3 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@swansway?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Swansway Motor Group</a> on <a href="https://unsplash.com/photos/a-blue-car-parked-on-the-side-of-a-road-m6P1sUOTPr4?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A1 comunity-containter">
-            <h2><a href="A1community.html"><span class="changeTextColour">A1</span> communtiy page</a></h2>
-            <img src="/public/assets/a1-community.jpg" alt="image represents the a1 community">
+            <h2><a href="/A1"><span class="changeTextColour">A1</span> communtiy page</a></h2>
+            <img src="assets/a1-community.jpg" alt="image represents the a1 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@swansway?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Swansway Motor Group</a> on <a href="https://unsplash.com/photos/a-grey-car-is-parked-in-a-showroom-UJcuye-9NNw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A5 comunity-containter">
-            <h2><a href="A5community.html"><span class="changeTextColour">A5</span> communtiy page</a></h2>
-            <img src="/public/assets/a5-community.jpg" alt="image represents the a5 community">
+            <h2><a href="/A5"><span class="changeTextColour">A5</span> communtiy page</a></h2>
+            <img src="assets/a5-community.jpg" alt="image represents the a5 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@franvelito?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Velito</a> on <a href="https://unsplash.com/photos/a-black-and-white-photo-of-an-audi-car-xdI8dBx1SA8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="A8 comunity-containter">
-            <h2><a href="A8community.html"> <span class="changeTextColour">A8</span> communtiy page</a></h2>
-            <img src="/public/assets/a8-community.jpg" alt="image represents the a8 community">
+            <h2><a href="/A8"> <span class="changeTextColour">A8</span> communtiy page</a></h2>
+            <img src="assets/a8-community.jpg" alt="image represents the a8 community">
             
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@stablevehiclecontracts?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">David Moffatt</a> on <a href="https://unsplash.com/photos/a-black-car-parked-on-a-brick-road--44rAoX5TzQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="Q3 comunity-containter">
-            <h2><a href="Q3community.html"><span class="changeTextColour">Q3</span> communtiy page</a></h2>
-            <img src="/public/assets/Q3-community.jpg" alt="image represents the Q3 community">
+            <h2><a href="/Q3"><span class="changeTextColour">Q3</span> communtiy page</a></h2>
+            <img src="assets/Q3-community.jpg" alt="image represents the Q3 community">
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@huntleytography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Devon Janse van Rensburg</a> on <a href="https://unsplash.com/photos/black-bmw-car-on-road-during-daytime-CIJOTiD31l0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="Q5 comunity-containter">
-            <h2><a href="Q5community.html"><span class="changeTextColour">Q5</span> communtiy page</a></h2>
-            <img src="/public/assets/q5-community.jpg" alt="image represents the Q5 community">
+            <h2><a href="/Q5"><span class="changeTextColour">Q5</span> communtiy page</a></h2>
+            <img src="assets/q5-community.jpg" alt="image represents the Q5 community">
             
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@ddography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Deniz Demirci</a> on <a href="https://unsplash.com/photos/a-white-car-parked-in-front-of-a-building-BTnw2BSRUXA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
         <div class="Q7 comunity-containter">
-            <h2><a href="Q7community.html"><span class="changeTextColour">Q7</span> communtiy page</a></h2>
-            <img src="/public/assets/sq7-community.jpg" alt="image represents the Q7 community">
+            <h2><a href="/Q7"><span class="changeTextColour">Q7</span> communtiy page</a></h2>
+            <img src="assets/sq7-community.jpg" alt="image represents the Q7 community">
             
         </div>
 
         <!-- Photo by <a href="https://unsplash.com/@maksym_tymchyk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Maksym Tymchyk 🇺🇦</a> on <a href="https://unsplash.com/photos/black-sedan-on-road-during-daytime-bb6NaemzpGY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> -->
         <div class="Q8 comunity-containter">
-            <h2><a href="Q8community.html"><span class="changeTextColour">Q8</span> communtiy page</a></h2>
-            <img src="/public/assets/q8-community.jpg" alt="image represents the Q8 community">
+            <h2><a href="/Q8"><span class="changeTextColour">Q8</span> communtiy page</a></h2>
+            <img src="assets/q8-community.jpg" alt="image represents the Q8 community">
             
         </div>
 
