--- a/Views/A4community.html
+++ b/Views/A4community.html
@@ -77,7 +77,7 @@
         function fetchDiscussions() {
             return new Promise((resolve, reject) => {
                 const xhr = new XMLHttpRequest();
-                xhr.open('GET', '/api/discussions');
+                xhr.open('GET', '/api/discussionsA4');
                 xhr.onload = function () {
                     if (xhr.status >= 200 && xhr.status < 300) {
                         const discussions = JSON.parse(xhr.responseText);
@@ -92,7 +92,7 @@
                 xhr.send();
             });
         }
-
+    
         function displayDiscussions() {
             fetchDiscussions()
                 .then(discussions => {
@@ -102,16 +102,20 @@
                         // for each new post a div is created
                         const discussionElement = document.createElement('div');
                         discussionElement.classList.add('discussion');
-
+    
                         discussionElement.innerHTML = `
-                        <h3 class="discussion-topic"> Topic: ${discussion.Title}</h3>
-                    <p class="discussion-description"> Question ${discussion.Description}</p>
-                    <p class="discussion-username">Posted by: ${discussion.Username}</p>
-
-
-                    <button class="discussion-reply replyButton"  onclick="replyToDiscussion('${discussion.Title}', '${discussion.Username}')">Reply</button>
-                    <button class="discussion-delete deleteButton"  onclick="deleteDiscussion('${discussion.Title}', '${discussion.Username}')">Delete</button>
-                `;
+                            <h3 class="discussion-topic"> Topic: ${discussion.title}</h3>
+                            <p class="discussion-description"> Question ${discussion.description}</p>
+                            <p class="discussion-username">Posted by: ${discussion.username}</p>
+                            
+                            
+    
+                            <button class="discussion-reply replyButton"  onclick="replyToDiscussion('${discussion.title}', '${discussion.username}')">Reply</button>
+                            <form class="deleteDiscussionForm" action="/A4/A4DeletePost" method="post">
+                                <input type="text" name="discussionId" value="${discussion.discussionId}">
+                                <button type="submit" class="deleteButton">Delete</button>
+                            </form>
+                        `;
                         discussionsContainer.appendChild(discussionElement);
                     });
                 })
@@ -119,10 +123,11 @@
                     console.error('Error fetching or displaying discussions:', error);
                 });
         }
-
+    
         // Call the displayDiscussions function to fetch and display discussions
         displayDiscussions();
     </script>
+    
 
     <script src="sites.js/communities.js"></script>
     <script>
