--- a/Views/index.html
+++ b/Views/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="styles.css/index.css">
         <link rel="stylesheet" href="styles.css/media.css">
         <script src=sites.js/index.js defer></script>    
+        <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
        
     
     </head>
@@ -34,7 +35,12 @@
             </nav>
     
             <div class="popularTags">
-                <h2>Tags will go here</h2>
+                <h2 class="popularTagsTitle">Topics Trending:</h2>
+                <h2 class=""><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">Join the A3 conversation</a> </h2>
+                <h2 class=""><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A6">Audi A6 the best sudan in the german market?</a> </h2>
+                <h2 class=""><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/Q8">Q8 magic</a> </h2>
+                <h2 class=""><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">RS7 perfomance</a> </h2>
+                <h2 class=""><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A8">A8 luxury</a> </h2>
             </div>
         </header>
         
@@ -56,7 +62,7 @@
 
         <div class="newsSlide-container">
 
-            <h3><span class="changeTextColour">Audi</span> News</h3>
+            <h3><span class="changeTextColour"></span> Audi News</h3>
             <div class="slide fade">
                 <!-- https://unsplash.com/photos/a-close-up-of-the-front-of-a-blue-car-D0q3jhw0tGE -->
                 <img src="assets/AudiA6.jpg" alt="This is the all new blue Audi RS6">
