--- a/public/styles.css/general.css
+++ b/public/styles.css/general.css
@@ -125,3 +125,29 @@ nav
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+.popularTags h2
+{
+    display: inline-block;
+    padding: 20px;
+    margin-left: 10px;
+    
+}
+
+
+.popularTags a
+{
+    font-size: 20px;
+    color: white;
+}
+
+.popularTagsTitle
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-weight: 300;
+}
+.popularTags a:hover
+{
+    border-bottom: 3px solid red;
+}
