Improved design layout for tablet view for communities page

--- a/Views/communities.html
+++ b/Views/communities.html
@@ -7,8 +7,8 @@
    
     <meta name="author" content="Shivam Missar">
     <link rel="stylesheet" href="styles.css/general.css">
-    <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/media.css">
+    <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/community.css">
 
 
@@ -38,9 +38,7 @@
             </ul>
         </nav>
 
-        <div class="popularTags">
-            <h2>Tags will go here</h2>
-        </div>
+        
     </header>
 
 
@@ -118,7 +116,7 @@
    -->
         <div class="Q7 comunity-containter">
             <h2><a href="/Q7"><span class="changeTextColour">Q7</span> communtiy page</a></h2>
-            <img src="assets/sq7-community.jpg" alt="image represents the Q7 community">
+            <img src="assets/q7-community.jpg" alt="image represents the Q7 community">
             
         </div>
 
@@ -139,8 +137,8 @@
                 <!-- Bottom navigation for ease -->
                 <ul>
                     <!-- Logo taken from: https://brandslogos.com/cars/audi-logo-4/  -->
-                    <li><a href="/public/index.html"><img id="logo" src="/public/assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
-                    <li><a href="/public/communities.html">Find a community</a></li>
+                    <li><a href="/"><img id="logo" src="assets/audilogowhite.png" alt="This is the audi logo which shows 4 rings"></a></li> 
+                    <li><a href="communities">Find a community</a></li>
                     <li><a href="#">Page 3</a></li>
                 </ul>
             </nav>
