--- a/public/styles.css/media.css
+++ b/public/styles.css/media.css
@@ -351,6 +351,17 @@
 
     }
 
+    .disccusionButton
+    {
+        
+        font-size: 15px;
+        padding: 10px;
+        width: 200px;
+        position: relative;
+        left: 250px;
+        top: -60px;
+        display: none;
+    }
     .Discussions h2
     {
         position: relative;
@@ -358,6 +369,25 @@
         font-size: 30px;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: 300;
+    }
+    .disccusionForm form
+    {
+        position: relative;
+        left: 80px;
+    }
+
+    .discussion-reply
+    {
+        border: none;
+        width: 100px;
+        padding: 12px;
+        background-color: #666;
+    }
+    .deleteDiscussionForm button
+    {
+        border: none;
+        width: 100px;
+        padding: 10px;
     }
 
 
