Seperated media queries into seprate pages for better navigation of structure

--- a/Views/communities.html
+++ b/Views/communities.html
@@ -7,7 +7,8 @@
    
     <meta name="author" content="Shivam Missar">
     <link rel="stylesheet" href="styles.css/general.css">
-    <link rel="stylesheet" href="styles.css/media.css">
+    <link rel="stylesheet" href="styles.css/tablet.css">
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/community.css">
 
@@ -43,6 +44,7 @@
 
 
     <section class="SelectCommunity">
+        <h1>Select your community</h1>
 
         <!-- Photo by <a href="https://unsplash.com/@lovesyautopics?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Remy Lovesy</a> on <a href="https://unsplash.com/photos/silver-suv-on-beach-during-daytime-7mf-og0063c?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
    -->
