--- a/Views/login.html
+++ b/Views/login.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="styles.css/account.css">
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/general.css">
-    <link rel="stylesheet" href="styles.css/media.css">
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">
+    <link rel="stylesheet" href="styles.css/tablet.css">
 
 </head>
 
