--- a/Views/A1community.html
+++ b/Views/A1community.html
@@ -11,7 +11,9 @@
 <link rel="stylesheet" href="styles.css/general.css">
 
 <link rel="stylesheet" href="styles.css/individualCommunties.css">
-<link rel="stylesheet" href="styles.css/media.css">
+<link rel="stylesheet" href="styles.css/smallLaptops.css">
+<link rel="stylesheet" href="styles.css/tablet.css">
+
 
 
 </head>
