--- a/Views/A5community.html
+++ b/Views/A5community.html
@@ -11,7 +11,8 @@
 <meta name="author" content="Shivam Missar">
 <link rel="stylesheet" href="/styles.css/general.css">
 <link rel="stylesheet" href="/styles.css/individualCommunties.css">
-<link rel="stylesheet" href="/styles.css/media.css">
+<link rel="stylesheet" href="styles.css/smallLaptops.css">
+<link rel="stylesheet" href="styles.css/tablet.css">
 
 
 </head>
