--- a/Views/index.html
+++ b/Views/index.html
@@ -8,7 +8,9 @@
         <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="styles.css/general.css">
         <link rel="stylesheet" href="styles.css/index.css">
-        <link rel="stylesheet" href="styles.css/media.css">
+        
+        <link rel="stylesheet" href="styles.css/tablet.css">
+        <link rel="stylesheet" href="styles.css/smallLaptops.css">
         <script src=sites.js/index.js defer></script>    
         <script src="https://kit.fontawesome.com/f991cdd751.js" crossorigin="anonymous"></script>
        
@@ -36,11 +38,11 @@
     
             <div class="popularTags">
                 <h2 class="popularTagsTitle">Topics Trending:</h2>
-                <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">Join the A3 conversation</a> </h2>
+                <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">Join the A3 conversation </a></h2>
                 <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A6">Audi A6 the best sudan in the german market?</a> </h2>
                 <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/Q8">Q8 magic</a> </h2>
                 <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A3">RS7 perfomance</a> </h2>
-                <h2 class="trending"><i class="fa-solid fa-fire" style="color: #ff0000;"></i><a href="/A8">A8 luxury</a> </h2>
+                
             </div>
         </header>
         
