--- a/Views/manageaccounts.html
+++ b/Views/manageaccounts.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css/general.css">
     <link rel="stylesheet" href="styles.css/manageAccount.css">
-    <link rel="stylesheet" href="styles.css/media.css">
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">
+    <link rel="stylesheet" href="styles.css/tablet.css">
     <script src=sites.js/index.js defer></script>    
    
 
