--- a/Views/register.html
+++ b/Views/register.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css/general.css"/>
     <link rel="icon" href="assets/audiLogo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css/account.css">
-    <link rel="stylesheet" href="styles.css/media.css">
+    <link rel="stylesheet" href="styles.css/smallLaptops.css">
   
 
     
