--- a/public/styles.css/community.css
+++ b/public/styles.css/community.css
@@ -201,3 +201,10 @@
     border-radius:10px ;
 
 }
+
+.SelectCommunity h1
+{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+}
